# parallel-wos

./: .gitignore  CMakeLists.txt  README.md
images/: solution.hdr
include/pwos/: argparse.h  bbox.h  circle.h  common.h  image.h  integrator.h  progressBar.h  scene.h  stats.h
include/pwos/integrators/: distance.h  gridVisual.h  wog.h  wos.h
pwos/: CMakeLists.txt  README.md
pwos/include/pwos/: argparse.h  circle.h  closestPointGrid.h  common.h  fwd.h  image.h  integrator.h  progressBar.h  randomWalk.h  scene.h  stats.h
pwos/include/pwos/integrators/: distance.h  gridVisual.h  mcwog.h  mcwogVisual.h  wog.h  wogVisual.h  wos.h
pwos/scenes/: simple.txt
pwos/src/: argparse.cpp  bbox.cpp  closestPointGrid.cpp  image.cpp  integrator.cpp  main.cpp  randomWalk.cpp  scene.cpp  stats.cpp
scene_generation/: generate_scene.py
scene_generation/scenes/: out.txt  scotty_ncircs=0.csv  scotty_ncircs=122.csv  scotty_ncircs=132.csv  scotty_ncircs=146.csv  scotty_ncircs=250.csv  scotty_ncircs=495.csv  scotty_ncircs=500.csv  scotty_ncircs=72.csv  scs-logo_ncircs=1000.csv  scs-logo_ncircs=250.csv  the-human-condition.csv  the-human-condition.jpg.csv  the-human-condition_ncircs=10.csv  the-human-condition_ncircs=100.csv  the-human-condition_ncircs=928.csv  the-human-condition_ncircs=998.csv
src/: argparse.cpp  bbox.cpp  circle.cpp  closestPointGrid.cpp  image.cpp  integrator.cpp  main.cpp  scene.cpp  stats.cpp
